--- a/Docs.Web/Docs.Web.csproj
+++ b/Docs.Web/Docs.Web.csproj
@@ -1,4 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+	<Import Project="..\..\ShiftTemplates\ShiftFrameworkGlobalSettings.props" Condition="Exists('..\..\ShiftTemplates\ShiftFrameworkGlobalSettings.props')" />
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
@@ -9,10 +10,17 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.7" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.7" PrivateAssets="all" />
+		<PackageReference Include="ShiftSoftware.ShiftBlazor" Version="$(ShiftFrameworkVersion)" />
+		
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Docs.Shared\Docs.Shared.csproj" />
+		<ProjectReference Include="..\..\ShiftBlazor\ShiftBlazor\ShiftBlazor.csproj" Condition="Exists('..\..\ShiftBlazor\ShiftBlazor\ShiftBlazor.csproj')" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Layout\" />
 	</ItemGroup>
 
 </Project>
