--- a/Docs.Web/Docs.Web.csproj
+++ b/Docs.Web/Docs.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 	<Import Project="..\..\ShiftTemplates\ShiftFrameworkGlobalSettings.props" Condition="Exists('..\..\ShiftTemplates\ShiftFrameworkGlobalSettings.props')" />
 
 	<PropertyGroup>
@@ -19,5 +19,10 @@
 		<ProjectReference Include="..\Docs.Shared\Docs.Shared.csproj" />
 		<ProjectReference Include="..\..\ShiftBlazor\ShiftBlazor\ShiftBlazor.csproj" Condition="Exists('..\..\ShiftBlazor\ShiftBlazor\ShiftBlazor.csproj')" />
 	</ItemGroup>
+
+	<Target Name="RunSnippetGenerator" BeforeTargets="Build">
+		<Exec Command="dotnet run --project ..\Docs.SnippetGen\Docs.SnippetGen.csproj" />
+	</Target>
+
 
 </Project>
